--- a/css/pc.css
+++ b/css/pc.css
@@ -70,10 +70,16 @@
   text-align: center;
    background:#fff;
    padding: 25px;
-   height:340px;
+   height:276px;
+   cursor: pointer;
+   position: relative;
 }
 .team-member img {
   margin: auto;
+  margin-top: 35px;
+  width:84px;
+  height:84px;
+  border-radius: 42px;
 }
 .team-member h4{
 	color:#252755;
@@ -91,7 +97,7 @@
 .Mentors .team-member h4{border:none; padding-bottom:0; margin-bottom:0; line-height:45px; text-align:center; }
 .Mentors .team-member .blue-txt{line-height:30px;}
 .team{width:1230px; margin:84px auto 90px; padding:20px 0;}
-.team .col-sm-4{width:290px; height:550px; background:#fff; float:left; margin:0 38px 30px;box-shadow:0 0 15px rgba(53,101,253,0.2);}
+.team .col-sm-4{width:290px; /*height:550px;*/ background:#fff; float:left; margin:0 38px 30px;box-shadow:0 0 15px rgba(53,101,253,0.2);}
 .team .col-sm-4 p{ text-align:left;}
 .team .col-sm-4 .team-member .blue-txt{
 	display:inline-block;
@@ -136,4 +142,7 @@
 .video-js .vjs-big-play-button{background:#3d2de5; border:none;}
 
 
-
+/*植同学*/
+.tex{width:100%;height:100%;position: absolute;top:0px;right:0px;background-color: #000;opacity: 0.8;color: #fff;display: none;}
+.tex h2{color: #fff;margin-top: 26px;}
+.tex p{color: #fff;padding: 10px;}
